syntax = "proto3";

package myproject;

// 服务器类型
enum ServerType {
    CENTRAL = 0;          // 中心服务器
    DATA = 1;             // 数据服务
    GATEWAY = 2;          // 网关服务
    LOGIN = 3;            // 登录服务
    LOGIC = 4;            // 逻辑服务
}

service CentralServer{
	rpc RegisterServer (RegisterServerRequest) returns (RegisterServerResponse);    // 服务器注册
	rpc UnregisterServer (UnregisterServerRequest) returns (UnregisterServerResponse);    // 服务器断开
	rpc GetConnectPoor (ConnectPoorRequest) returns (ConnectPoorResponse);    // 获取连接池信息
}

// 注册服务器请求
message RegisterServerRequest {
    ServerType server_type = 1;  // 服务器类型
    bytes address = 2;  // 服务器地址
    bytes port = 3;  // 服务器端口
}
// 注册服务器响应
message RegisterServerResponse {
    bool success = 1;
    bytes message = 2;
}

// 断开服务器连接请求
message UnregisterServerRequest {
    ServerType server_type = 1;  // 服务器类型
    bytes address = 2;  // 服务器地址
    bytes port = 3;  // 服务器端口
}
// 断开服务器连接响应
message UnregisterServerResponse {
    bool success = 1;
    bytes message = 2;
}

// 获取连接池信息
message ConnectPoorRequest {
    ServerType server_type = 1;  // 目标服务器类型
}
// 获取连接池信息
message ConnectPoorResponse {
    bool success = 1;
    repeated ConnectInfo connect_info = 2;  // 连接池信息
    bytes message = 3;
}
// 连接信息
message ConnectInfo {
    bytes address = 1;  // 目标服务器地址
    int32 port = 2;  // 目标服务器端口
}